--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,19 +2,19 @@ name: Tests
 
 on:
   push:
-    branches: [ main ]
+    branches: [main]
   pull_request:
-    branches: [ main ]
+    branches: [main]
 
 jobs:
   test:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-slim
 
     strategy:
       fail-fast: false
       matrix:
-        php: ['8.2', '8.3', '8.4']
-        extensions: ['gmp,bcmath', 'gmp', 'bcmath', '']
+        php: ["8.2", "8.3", "8.4"]
+        extensions: ["gmp,bcmath", "gmp", "bcmath", ""]
 
     name: PHP ${{ matrix.php }} - Extensions ${{ matrix.extensions || 'none' }}
 
